fix: truncated tables on mobile resolutions
Do not use auto for overflow behavior, use scroll instead. This is
because the default behavior are not the same on desktop and mobile
browsers.

--- a/front/src/style/arch.css
+++ b/front/src/style/arch.css
@@ -30,6 +30,6 @@ th {
 	table {
 		width: 100%;
 		display: block;
-		overflow-x: auto;
+		overflow-x: scroll;
 	}
 }
