--- a/front/src/style/global.css
+++ b/front/src/style/global.css
@@ -45,7 +45,7 @@ main {
 	padding: 1rem;
 	align-items: center;
 	flex-grow: 1;
-	overflow-y: auto;
+	overflow-y: scroll;
 	overflow-x: hidden;
 	width: 100%;
 	margin: 0;
@@ -85,7 +85,7 @@ footer a {
 @media only screen and (max-width: 1600px) {
 	body {
 		display: block;
-		overflow: auto;
+		overflow: scroll;
 		font-size: 1.5rem;
 	}
 
